--- a/opexa-website/style.css
+++ b/opexa-website/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     background-color: #FAF8DA;
     font-family: 'Open Sans';
 }
@@ -18,7 +19,8 @@ body {
 
 .category-section {
     display: flex;
-    display: -webkit-flex; /* This is a vendor prefix! */
+    margin: 50px auto;
+    width: 450px;
 }
 
 .category-details {
@@ -50,6 +52,8 @@ body {
 
 .primary-footer {
     background-color: #FFC122;
+    padding: 2px;
+    text-align: center;
 }
 
 .created-by {
