--- a/opexa-website/style.css
+++ b/opexa-website/style.css
@@ -15,6 +15,7 @@ body {
 
 .header-img {
     width: 650px;
+    /* filter: grayscale(100%); */
 }
 
 .category-section {
@@ -29,6 +30,7 @@ body {
 
 .category-img {
     width: 200px;
+    /* filter: grayscale(100%); */
 }
 
 .category-heading {
