--- a/opexa-website/style.css
+++ b/opexa-website/style.css
@@ -31,6 +31,7 @@ body {
 .category-img {
     width: 200px;
     /* filter: grayscale(100%); */
+    /* border-radius: 50%; */
 }
 
 .category-heading {
